--- a/besthorrorscenes/package.json
+++ b/besthorrorscenes/package.json
@@ -2,8 +2,7 @@
   "name": "scss-masterclass",
   "version": "1.0.0",
   "main": "index.js",
-  "repository": "https://github.com/nomadcoders/scss-masterclass",
-  "author": "Nicolás Serrano Arévalo <itnico.las.me@gmail.com>",
+  "author": "rsuubinn",
   "license": "MIT",
   "dependencies": {
     "@babel/core": "^7.4.5",
@@ -26,5 +25,6 @@
     "gulp-sass": "^5.1.0",
     "node-sass": "^7.0.1",
     "sass": "^1.53.0"
-  }
+  },
+  "type": "module"
 }
