내용 추가중

--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "scss-masterclass",
   "version": "1.0.0",
   "main": "index.js",
-  "repository": "https://github.com/nomadcoders/scss-masterclass",
-  "author": "Nicolás Serrano Arévalo <itnico.las.me@gmail.com>",
+  "author": "rsuubinn",
   "license": "MIT",
   "dependencies": {
     "@babel/core": "^7.4.5",
